Fix older java compatibility issue